[metadata]
name = pyeet
version = 0.0.1
author = Tyson Clugg
author_email = tyson@clugg.net
description = Pyeet is a general-purpose language that embeds asynchronous Python in all your files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tysonclugg/pyeet
project_urls =
    Bug Tracker = https://github.com/tysonclugg/pyeet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
